--- a/app/src/main/res/layout/fragment_simulator.xml
+++ b/app/src/main/res/layout/fragment_simulator.xml
@@ -1,130 +1,186 @@
-<?xml version="1.0" encoding="utf-8"?>
-<com.llamasoft.envi.ui.components.LockableNestedScrollView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mainScroll"
+    android:id="@+id/zoomLayout"
     android:fillViewport="true"
     tools:context=".ui.simulator.SimulatorFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/keyline_2">
-
-        <FrameLayout
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+        <com.llamasoft.envi.ui.simulator.TouchImageView
+            android:id="@+id/selectedImage"
+            android:scaleType="centerInside"
+            android:layout_gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
-            <ImageView
-                android:id="@+id/selectedImage"
-                android:scaleType="centerCrop"
-                android:layout_gravity="center"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:src="@drawable/ic_simulator_mirror"
+            android:contentDescription="@string/ignore"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/verticalTools"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/background_tools_right"
+            android:padding="@dimen/keyline_3"
+            android:layout_marginTop="@dimen/keyline_4"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/currentTool"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:src="@drawable/crop_image_menu_flip"
-                android:contentDescription="@string/ignore"/>
-            <RelativeLayout
-                android:id="@+id/brush_size_slider_container"
-                android:paddingVertical="@dimen/keyline_4"
-                android:paddingHorizontal="@dimen/keyline_5"
-                android:background="@drawable/sheet_header_black_transparent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:visibility="gone">
-                <TextView
-                    android:id="@+id/brush_size_slider_title_text"
-                    style="@style/Theme.MyApp.Text.HeadLine6.Light"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/brush_slider_title_paint_brush"
-                    android:layout_alignParentTop="true"/>
+                android:contentDescription="@string/ignore"
+                android:src="@drawable/ic_simulator_bucket"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:scaleType="centerCrop"
+                app:tint="@color/white"/>
 
-                <com.google.android.material.slider.Slider
-                    android:id="@+id/brush_size_slider"
-                    android:layout_below="@id/brush_size_slider_title_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/keyline_4"
-                    android:value="20"
-                    android:valueFrom="10"
-                    android:valueTo="100"
-                    app:labelBehavior="gone"
-                    app:thumbRadius="12dp"
-                    app:thumbColor="@color/white"
-                    app:trackColor="@color/white"
-                    app:trackHeight="@dimen/keyline_0" />
-
-                <TextView
-                    android:id="@+id/brush_size_slider_min_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/keyline_2"
-                    android:text="@string/brush_slider_min_value"
-                    style="@style/Theme.MyApp.Text.Paragraph2DarkTinyWhite1"
-                    android:layout_below="@id/brush_size_slider"
-                    android:layout_alignParentStart="true"/>
-
-                <TextView
-                    android:id="@+id/brush_size_slider_max_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/keyline_2"
-                    android:text="@string/brush_slider_max_value"
-                    style="@style/Theme.MyApp.Text.Paragraph2DarkTinyWhite1"
-                    android:layout_below="@id/brush_size_slider"
-                    android:layout_alignParentEnd="true"/>
-            </RelativeLayout>
-        </FrameLayout>
-
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/currentColor"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginTop="@dimen/keyline_4"
+                android:background="@color/white"
+                android:contentDescription="@string/ignore"
+                android:layerType="software"
+                android:scaleType="centerCrop"
+                app:layout_constraintStart_toStartOf="@id/currentTool"
+                app:layout_constraintEnd_toEndOf="@id/currentTool"
+                app:layout_constraintTop_toBottomOf="@id/currentTool"
+                app:shapeAppearance="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"
+                app:strokeColor="@color/gray_300"
+                app:strokeWidth="2dp"/>
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/undoButton"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="@dimen/keyline_4"
+                android:contentDescription="@string/ignore"
+                android:layerType="software"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/currentColor"
+                app:tint="@color/white"
+                android:src="@drawable/ic_undo"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <View
+        android:id="@+id/sheet_bg"
+        android:visibility="gone"
+        android:background="@color/gray_800"
+        android:alpha="0.1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+    </View>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:visibility="gone"
+        android:id="@+id/brush_size_slider_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="bottom"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+        <View
+            android:id="@+id/sliderBackground"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@color/gray_800"
+            android:alpha="0.1"/>
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:context=".ui.home.OngoingProjectSheet">
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/paint_menu_list"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                tools:listitem="@layout/item_option_paint"
-                app:spanCount="6"
-                tools:itemCount="4"
-                android:paddingHorizontal="@dimen/keyline_3"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:paddingHorizontal="@dimen/keyline_5"
+            android:paddingVertical="@dimen/keyline_4"
+            android:background="@drawable/sheet_header_black_transparent">
             <TextView
-                android:id="@+id/title_text"
-                app:layout_constraintTop_toBottomOf="@id/paint_menu_list"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginHorizontal="@dimen/keyline_4"
-                style="@style/Theme.MyApp.Text.HeadLine6.Dark.Caps"
+                android:id="@+id/brush_size_slider_title_text"
+                style="@style/Theme.MyApp.Text.HeadLine6.Light"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/my_pallete"
-                />
+                android:layout_alignParentTop="true"
+                android:text="@string/brush_slider_title_paint_brush"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/brush_size_slider"/>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_view"
+            <com.google.android.material.slider.Slider
+                android:id="@+id/brush_size_slider"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                tools:listitem="@layout/item_swatch_saved_color"
-                app:spanCount="6"
-                tools:itemCount="6"
-                android:paddingHorizontal="@dimen/keyline_3"
-                android:paddingTop="@dimen/keyline_2"
-                android:paddingBottom="@dimen/keyline_1"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_below="@id/brush_size_slider_title_text"
+                android:layout_marginTop="@dimen/keyline_4"
+                android:value="20"
+                android:valueFrom="10"
+                android:valueTo="100"
+                app:labelBehavior="gone"
+                app:thumbColor="@color/white"
+                app:thumbRadius="12dp"
+                app:trackColor="@color/white"
+                app:trackHeight="@dimen/keyline_0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/title_text" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/brush_size_slider_min_text"/>
 
+            <TextView
+                android:id="@+id/brush_size_slider_min_text"
+                style="@style/Theme.MyApp.Text.Paragraph2DarkTinyWhite1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/brush_size_slider"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="@dimen/keyline_2"
+                android:text="@string/brush_slider_min_value"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <TextView
+                android:id="@+id/brush_size_slider_max_text"
+                style="@style/Theme.MyApp.Text.Paragraph2DarkTinyWhite1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/brush_size_slider"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="@dimen/keyline_2"
+                android:text="@string/brush_slider_max_value"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </LinearLayout>
-</com.llamasoft.envi.ui.components.LockableNestedScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <include
+        android:id="@+id/sheet_paint_tools"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        layout="@layout/sheet_paint_tools" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
