--- a/app/src/main/res/layout/fragment_simulator.xml
+++ b/app/src/main/res/layout/fragment_simulator.xml
@@ -1,10 +1,9 @@
+<?xml  version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/zoomLayout"
     android:fillViewport="true"
-    tools:context=".ui.simulator.SimulatorFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
@@ -17,6 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent">
         <com.llamasoft.envi.ui.simulator.TouchImageView
             android:id="@+id/selectedImage"
+            android:background="@color/white"
             android:scaleType="centerInside"
             android:layout_gravity="center"
             android:layout_width="match_parent"
@@ -34,18 +34,27 @@
             android:id="@+id/verticalTools"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/background_tools_right"
-            android:padding="@dimen/keyline_3"
             android:layout_marginTop="@dimen/keyline_4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
-
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/toolsBackground"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:background="@drawable/background_tools_right"/>
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/currentTool"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@string/ignore"
+                android:layout_marginTop="@dimen/keyline_3"
+                android:layout_marginHorizontal="@dimen/keyline_3"
                 android:src="@drawable/ic_simulator_bucket"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:scaleType="centerCrop"
@@ -56,6 +65,7 @@
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_marginTop="@dimen/keyline_4"
+                android:layout_marginHorizontal="@dimen/keyline_3"
                 android:background="@color/white"
                 android:contentDescription="@string/ignore"
                 android:layerType="software"
@@ -70,12 +80,16 @@
                 android:id="@+id/undoButton"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
+                android:layout_marginHorizontal="@dimen/keyline_3"
                 android:layout_marginTop="@dimen/keyline_4"
+                android:layout_marginBottom="@dimen/keyline_2"
                 android:contentDescription="@string/ignore"
                 android:layerType="software"
                 android:scaleType="centerCrop"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@id/currentColor"
+                app:layout_constraintEnd_toEndOf="@id/currentColor"
                 app:layout_constraintTop_toBottomOf="@id/currentColor"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:tint="@color/white"
                 android:src="@drawable/ic_undo"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
